--- a/index.html
+++ b/index.html
@@ -2,19 +2,19 @@
 <html lang="en">
 
 <head>
+    <title>Mosaic: Find Hidden Artistic Connections with Deep Learning</title>
+    <meta property="og:title" content="Mosaic: Find Hidden Artistic Connections with Deep Learning">
+    <meta property="og:image" content="https://mmlsparkdemo.blob.core.windows.net/mosaic-shares/header-image.jpg">
+    <meta property="og:url" content="https://microsoft.github.io/art/" data-react-helmet="true">
+    <meta property="og:description"
+        content="Use deep learning to find hidden connections in art that span time, culture, and media."
+        data-react-helmet="true">
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/art/mosaicTabLogo.png" />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="/art/manifest.json" />
     <link href="/art/static/css/main.f92cbf46.chunk.css" rel="stylesheet">
-    <title>Mosaic: Find Hidden Artistic Connections with Deep Learning</title>
-    <meta property="og:title" content="Mosaic: Find Hidden Artistic Connections with Deep Learning">
-    <meta property="og:image" content="https://mmlsparkdemo.blob.core.windows.net/mosaic-shares/header-image.jpg">
-    <meta property="og:url" content="www.aka.ms/mosaic" data-react-helmet="true">
-    <meta property="og:description"
-        content="Use deep learning to find hidden connections in art that span time, culture, and media."
-        data-react-helmet="true">
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
@@ -51,7 +51,7 @@
 
     <script>!function (e) { function r(r) { for (var n, a, l = r[0], f = r[1], i = r[2], c = 0, s = []; c < l.length; c++)a = l[c], Object.prototype.hasOwnProperty.call(o, a) && o[a] && s.push(o[a][0]), o[a] = 0; for (n in f) Object.prototype.hasOwnProperty.call(f, n) && (e[n] = f[n]); for (p && p(r); s.length;)s.shift()(); return u.push.apply(u, i || []), t() } function t() { for (var e, r = 0; r < u.length; r++) { for (var t = u[r], n = !0, l = 1; l < t.length; l++) { var f = t[l]; 0 !== o[f] && (n = !1) } n && (u.splice(r--, 1), e = a(a.s = t[0])) } return e } var n = {}, o = { 1: 0 }, u = []; function a(r) { if (n[r]) return n[r].exports; var t = n[r] = { i: r, l: !1, exports: {} }; return e[r].call(t.exports, t, t.exports, a), t.l = !0, t.exports } a.m = e, a.c = n, a.d = function (e, r, t) { a.o(e, r) || Object.defineProperty(e, r, { enumerable: !0, get: t }) }, a.r = function (e) { "undefined" != typeof Symbol && Symbol.toStringTag && Object.defineProperty(e, Symbol.toStringTag, { value: "Module" }), Object.defineProperty(e, "__esModule", { value: !0 }) }, a.t = function (e, r) { if (1 & r && (e = a(e)), 8 & r) return e; if (4 & r && "object" == typeof e && e && e.__esModule) return e; var t = Object.create(null); if (a.r(t), Object.defineProperty(t, "default", { enumerable: !0, value: e }), 2 & r && "string" != typeof e) for (var n in e) a.d(t, n, function (r) { return e[r] }.bind(null, n)); return t }, a.n = function (e) { var r = e && e.__esModule ? function () { return e.default } : function () { return e }; return a.d(r, "a", r), r }, a.o = function (e, r) { return Object.prototype.hasOwnProperty.call(e, r) }, a.p = "/art/"; var l = this.webpackJsonpart = this.webpackJsonpart || [], f = l.push.bind(l); l.push = r, l = l.slice(); for (var i = 0; i < l.length; i++)r(l[i]); var p = f; t() }([])</script>
     <script src="/art/static/js/2.36c54e78.chunk.js"></script>
-    <script src="/art/static/js/main.fc2eb9eb.chunk.js"></script>
+    <script src="/art/static/js/main.910275f7.chunk.js"></script>
 </body>
 
 </html>
