try to change homepage

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>mosAIc</title>
+    <title>Mosaic: Find Hidden Artistic Connections with Deep Learning</title>
+    <meta property="og:title" content="Mosaic: Find Hidden Artistic Connections with Deep Learning">
+    <meta property="og:image" content="https://mmlsparkdemo.blob.core.windows.net/mosaic-shares/header-image.jpg">
+    <meta property="og:url" content="https://microsoft.github.io/art/" data-react-helmet="true">
+    <meta property="og:description"
+      content="Use deep learning to find hidden connections in art that span time, culture, and media."
+      data-react-helmet="true">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
